add docs for record
